@@ -7,6 +7,8 @@
           (http://www.packetfence.org/mantis/view.php?id=552)
         new configfiles push and pull commands
           (http://www.packetfence.org/mantis/view.php?id=550)
+        documented pfcmd manage commands
+          (http://www.packetfence.org/mantis/view.php?id=554)
 
 1.8.0
         unify log management
